--- a/app/src/main/res/layout/item_movie.xml
+++ b/app/src/main/res/layout/item_movie.xml
@@ -19,11 +19,12 @@
         android:id="@+id/tvTitle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="20dp"
-        android:textSize="24sp"
         android:text="Enola holmes"
         android:textColor="#000000"
-        app:layout_constraintStart_toEndOf="@+id/ivMoviePoster"
-        app:layout_constraintTop_toTopOf="ivMoviePoster" />
+        android:textSize="24sp"
+        android:layout_marginTop="12dp"
+        android:layout_marginStart="8dp"
+        app:layout_constraintStart_toEndOf="@id/ivMoviePoster"
+        app:layout_constraintTop_toTopOf="parent"/>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
