--- a/app/src/main/res/layout/item_add_movie.xml
+++ b/app/src/main/res/layout/item_add_movie.xml
@@ -23,8 +23,7 @@
         android:layout_marginTop="16dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="2dp"
-        android:textSize="20sp"
-        android:textColor="#000000" />
+        android:textSize="20sp"/>
 
     <com.google.android.material.textview.MaterialTextView
         android:id="@+id/movieYear"
@@ -36,8 +35,7 @@
         android:layout_marginTop="2dp"
         android:layout_marginEnd="8dp"
         android:layout_marginBottom="4dp"
-        android:textSize="16sp"
-        android:textColor="#000000" />
+        android:textSize="16sp" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/fabAddMovie"
